Fixed overlap on header Fixed button text shadow/color for new items

--- a/app/assets/stylesheets/cms/bootstrap-customizations.css.scss
+++ b/app/assets/stylesheets/cms/bootstrap-customizations.css.scss
@@ -66,3 +66,12 @@ tbody .block_status.published, #sitemap .span1.Published {
 .label {margin: 12px 10px 0 0;}
 
 #loginmain {margin: 0 auto; float: none;}
+
+.container-fluid {
+  padding-top: 20px;
+}
+
+.navbar .nav > li > a {
+  color: #fff;
+  text-shadow: 0 0px 0 white;
+}
